[package]
name = "querio_derive"
version = "0.0.1"
edition = "2021"

authors = ["Dekirisu <dekirisu@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dekirisu/querio/"
description = "Derive macro for querio"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0.43"
regex = {version="1.6.0", optional=true}

[features]
default = []
flatten = ["dep:regex"]
native_input = []
native_output = []
variables = []